fix: grid  scroll overflow

--- a/Styles/aside.css
+++ b/Styles/aside.css
@@ -1,17 +1,26 @@
 aside {
   background-color: rgb(112, 143, 153);
-  border: 2px solid rgb(0, 0, 0);
   width: 40%;
-  /* height: 50%; */
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  align-items: center;
+  padding: 2rem;
+  gap: 15px;
 
   button {
-    color: white;
+    font-size: 2rem;
+    color: blue;
     background: lightblue;
-    border: 1px solid rgb(0, 0, 0);
+    border: none;
     border-radius: 4px;
-    height: 50px;
+    height: 80px;
+    width: 100%;
+    cursor: pointer;
+
+    transition: height 0.2s ease-in-out;
+
+    &:hover {
+      height: 200px;
+    }
   }
 }
