--- a/Styles/carta.css
+++ b/Styles/carta.css
@@ -1,13 +1,11 @@
 .imagenes-grid {
   width: 100%;
-  max-height: 100%;
   display: grid;
   overflow: auto;
   grid-template-columns: auto auto auto;
   align-content: start;
-  /* justify-content: start; */
   gap: 100px;
-  border: 2px solid black;
+  padding-bottom: 40px;
 }
 
 .carta {
