--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -1,5 +1,9 @@
 footer {
   width: 100%;
   text-align: center;
-  border: 2px solid navy;
+  background-color: rgba(0, 0, 0, .4);
+  padding: .4rem;
+  color: white;
+  font-size: 18px;
+  letter-spacing: 4px;
 }
