--- a/Styles/mainSection.css
+++ b/Styles/mainSection.css
@@ -3,6 +3,5 @@
   padding-top: 10px;
   display: flex;
   gap: 20px;
-  /* border: 3px solid salmon ; */
-  height: 100%;
+  overflow: hidden;
 }
